--- a/css/style.css
+++ b/css/style.css
@@ -66,8 +66,8 @@ h2{
     color: white;
     ;
 }
-#logo{
-    max-width: 100px;
+#NEMPENSAR{
+    max-width: 200px;
     max-height: 100px;
 }
 footer{
